change python to html tools to plot picture

--- a/Rayleigh_Ritz.ipynb
+++ b/Rayleigh_Ritz.ipynb
@@ -32,30 +32,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "0e086332",
+   "cell_type": "markdown",
+   "id": "303af03b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"./figure/timo_SAM.png\" width=\"400\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# import image module\n",
-    "from IPython.display import Image\n",
-    "# get the image\n",
-    "Image(url=\"./figure/timo_SAM.png\", width = 400)"
+    "<p align=\"center\">\n",
+    "<img src=\"./figure/timo_SAM.png\" alt=\"tower_model\" width=\"400\" height=\"auto\">\n",
+    "</p>"
    ]
   },
   {
