html error again??

--- a/Empirical_Physical_Relation.ipynb
+++ b/Empirical_Physical_Relation.ipynb
@@ -336,30 +336,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "dbfed49c",
+   "cell_type": "markdown",
+   "id": "733b6185",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"./figure/fig_geo_section.png\" width=\"800\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# import image module\n",
-    "from IPython.display import Image\n",
-    "# get the image\n",
-    "Image(url=\"./figure/fig_geo_section.png\", width = 800)"
+    "<p align=\"center\">\n",
+    "<img src=\"./figure/fig_geo_section.png\" alt=\"tower_model\" width=\"700\" height=\"auto\">\n",
+    "</p>"
    ]
   },
   {
@@ -405,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "12ad5c40",
    "metadata": {},
    "outputs": [
