--- a/Rayleigh_Ritz.ipynb
+++ b/Rayleigh_Ritz.ipynb
@@ -33,12 +33,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc864d74",
+   "id": "fb2e6c91",
    "metadata": {},
    "source": [
-    "<p align=\"center\">\n",
-    "<img src=\"./figure/timo_SAM.png\" alt=\"tower_model\" width=\"400\" height=\"auto\">\n",
-    "</p>"
+    "\n",
+    "<img src=\"figure/timo_SAM.png\" alt=\"tower_model\" width=\"400\" height=\"auto\">"
    ]
   },
   {
