change \ in figure

--- a/Rayleigh_Ritz.ipynb
+++ b/Rayleigh_Ritz.ipynb
@@ -33,11 +33,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb2e6c91",
+   "id": "fe2d1bbf",
    "metadata": {},
    "source": [
-    "\n",
-    "<img src=\"figure/timo_SAM.png\" alt=\"tower_model\" width=\"400\" height=\"auto\">"
+    "<img src=\"figure/timo_SAM.png\" width=\"400\" />"
    ]
   },
   {
