--- a/Rayleigh_Ritz.ipynb
+++ b/Rayleigh_Ritz.ipynb
@@ -33,10 +33,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe2d1bbf",
+   "id": "b14c53c0",
    "metadata": {},
    "source": [
-    "<img src=\"figure/timo_SAM.png\" width=\"400\" />"
+    "<img src=\"\" width=\"800\" />"
    ]
   },
   {
