--- a/Rayleigh_Ritz.ipynb
+++ b/Rayleigh_Ritz.ipynb
@@ -33,10 +33,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b14c53c0",
+   "id": "46a60fb2",
    "metadata": {},
    "source": [
-    "<img src=\"\" width=\"800\" />"
+    "<img src=\"figure/timo_SAM.png\" with=\"40\"/>"
    ]
   },
   {
