--- a/Rayleigh_Ritz.ipynb
+++ b/Rayleigh_Ritz.ipynb
@@ -33,10 +33,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46a60fb2",
+   "id": "9fae2e10",
    "metadata": {},
    "source": [
-    "<img src=\"figure/timo_SAM.png\" with=\"40\"/>"
+    "<img src='figure/timo_SAM.png' width='400'/>"
    ]
   },
   {
