--- a/Rayleigh_Ritz.ipynb
+++ b/Rayleigh_Ritz.ipynb
@@ -33,10 +33,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fae2e10",
+   "id": "18efed5a",
    "metadata": {},
    "source": [
-    "<img src='figure/timo_SAM.png' width='400'/>"
+    "<img src=\"figure/timo_SAM.png\" width=\"400\" > "
    ]
   },
   {
